--- a/view/en/index_en.html
+++ b/view/en/index_en.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/estilos.css">
+    <link rel="stylesheet" href="../../CSS/estilos.css">
     <title>Curriculum</title>
 </head>
 <body>
     <footer class="fijo">
         <div class="colum4 imagenPequeña juntarMQ">
-            <a href="#seccion1">
-              <img src="../img/earth-americas.svg">
+            <a href="./../../index.html">
+              <img src="../../img/earth-americas.svg">
             </a>
         </div>
         <div class="colum4 imagenPequeña imagenDerecha">
-            <a href="#seccion2">
-                <img src="../img/signs-post-solid.svg">
+            <a href="./experience.html">
+                <img src="../../img/signs-post-solid.svg">
             </a>
         </div>
         <div class="colum4 imagenPequeña">
-            <a href="#seccion3">
-                <img src="../img/school-solid.svg">
+            <a href="./education.html">
+                <img src="../../img/school-solid.svg">
             </a>
         </div>
         <div class="colum4 imagenPequeña">
-            <a href="#seccion4">
-                <img src="../img/address-card-solid.svg">
+            <a href="index_en.html">
+                <img src="../../img/address-card-solid.svg">
             </a>
         </div>
     </footer>
@@ -35,15 +35,15 @@
             <h1 class="textoEnMedio">Marcos Felix Hernandez</h1>
         </div>
         <div class="colum2">
-            <img class="imagen" src="../img/marcos.jpg" width="500">
+            <img class="imagen" src="../../img/marcos.jpg" width="500">
         </div>
     </div>
     <div class="row">
         <div class="colum1">
-            <h1 id="seccion4">Who I am</h1>
+            <h1 id="seccion4">Who am i</h1>
         </div>
         <p>I am a person who has very good social skills so it is never difficult for me to integrate into groups, I am also a hard-working person involved in everything I do and who does not like to leave things half done</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embedXFEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/fENYVmV0NpI?si=Kt4xBQ2l_g4TUoUF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
     </div>
     <div class="row">
         <div class="colum1">
@@ -51,38 +51,15 @@
         </div>
         <p>My professional goal is to learn as much as possible and develop my computer skills. The fact of growing professionally motivates me a lot, I have confidence in my social skills to integrate.</p>    
     </div>
-    <div class="row">
-        <div class="colum3">
-            <h1 id="section3">Regulated training / studies</h1>            
-            <p><strong>Studying </strong> the second year of intermediate level vocational training in computer science Joan XXIII Study Center </p>
-            <p><strong>2021</strong> Compulsory Secondary Education (ESO) Can Vilumara Study Center</p>        
-        </div>
-        <div class="colum3">
-            <h1>non-working activities</h1>
-            <p>"I am a monitor at a leisure center voluntarily or during the main festivities of Hospitalet.</p>        
-        </div>
-        <div class="colum3">
-            <h1>Further training</h1>
-            <p>I have studied English at Language House</p>        
-        </div>
-    </div>
+   
     <div class="colum1">
         <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.1130475681634!2d2.1072971999999908!3d41.34989649999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a498d64bd023fd%3A0x26089fc39cb352a3!2sCentro%20de%20Estudios%20Joan%20XXIII!5e0!3m2!1ses!2ses!4v1683819029261!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <div class="row">
-        <div class="colum1">
-            <h1 id="seccion2">Experiencia laboral</h1>
-        </div>
-        <p>My work experience has been a mandatory internship at the Jesuites Sant Gervasi center while I was in the second year of my computer science degree where I have been an internship for 5 months and when this period is over the company decided to hire me, where I have been for a period of 6 months from the end of November to May where I have been able to experience more thoroughly what is lived by working.</p>
-        <p>During my work stay I was working as a computer technician where, among various functions, I had to repair laptops, touch screens, printers and projectors of the institution</p>    
-    </div>
-    <div class="colum1">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.953545957781!2d2.147043811202116!3d41.396815195291204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a29ebbc0255f%3A0xed736df3f5ec3ccd!2sJesu%C3%AFtes%20Sant%20Gervasi%20-%20Infant%20Jes%C3%BAs!5e0!3m2!1sca!2ses!4v1714743460922!5m2!1sca!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+    
     <div class="row">
         <div class="colum2">
             <div>
-                <h1>Competencias personales</h1>
+                <h1>Personal Skills</h1>
             </div>
             <div class="centro">
                 <table border="2">
@@ -204,6 +181,5 @@
             <p class="TextoFinal">08901</p>
         </div>
     </div>
-    <footer><a href="../index.html"><img class="imagen" src="../img/ESP.jpg"></a></footer>
 </body>
 </html>
