ahora siq final

--- a/view/en/education.html
+++ b/view/en/education.html
@@ -30,6 +30,11 @@
     </div>
 </footer>
 
+<div class="row fondoNegro">
+    <div class="colum1">
+        <h1 class="TextoFinal"><strong>Education</strong></h1>
+    </div>
+</div>
     <div class="colum3">
         <h1 id="section3">Regulated training / studies</h1>            
         <p><strong>Studying </strong> the second year of intermediate level vocational training in computer science Joan XXIII Study Center </p>
