--- a/view/en/experience.html
+++ b/view/en/experience.html
@@ -30,8 +30,11 @@
     </div>
 </footer>
 
+<div class="row fondoNegro">
     <div class="colum1">
-        <h1 id="seccion2">Work Experience</h1>
+        <h1 class="TextoFinal"><strong>Work experience</strong></h1>
+    </div>
+
     </div>
     <p>My work experience has been a mandatory internship at the Jesuites Sant Gervasi center while I was in the second year of my computer science degree where I have been an internship for 5 months and when this period is over the company decided to hire me, where I have been for a period of 6 months from the end of November to May where I have been able to experience more thoroughly what is lived by working.</p>
     <p>During my work stay I was working as a computer technician where, among various functions, I had to repair laptops, touch screens, printers and projectors of the institution</p>    
