--- a/view/estudis.html
+++ b/view/estudis.html
@@ -30,6 +30,12 @@
     </div>
 </footer>
 
+<div class="row fondoNegro">
+    <div class="colum1">
+        <h1 class="TextoFinal"><strong>Estudios</strong></h1>
+    </div>
+</div>
+
     <div class="colum3">
         <h1 id="seccion3">Formacion reglada / estudis</h1>
         <p><strong>Cursando</strong> el segundo año de la FP de grado medio de informática Centro de estudios Joan XXIII</p>
