--- a/view/experiencia.html
+++ b/view/experiencia.html
@@ -30,7 +30,11 @@
     </div>
 </footer>
 
-<h1 id="seccion2">Experiencia laboral</h1>
+<div class="row fondoNegro">
+    <div class="colum1">
+        <h1 class="TextoFinal"><strong>Experiencia laboral</strong></h1>
+    </div>
+</div>
 </div>
 <p>Mi experiencia laboral ha sido unas praticas obligatorias en el centro de Jesuites el Sant Gervasi mientras cursaba el segundo año de grado medio de informatica donde he estado 5 meses de practicas.</p>
 <p>En mi estancia laboral estuve ejerciendo el cargo de tecnico informatico donde entre varias funciones tenia la de reparar los portatiles, pantallas tactiles, impresoras i projectores de la institucion</p>        
